added alt text to images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="feed">
             <div class="user">
                 <div class="img">
-                    <img
+                    <img alt="user"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT3K_LSa3Ra2-7o6SlqWVCQCcl-Z5Pl8mZMTQ&usqp=CAU" />
                 </div>
                 <div class="user-data">
@@ -88,7 +88,7 @@
         <div class="feed">
             <div class="user">
                 <div class="img">
-                    <img
+                    <img alt="user"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQOIbXi8hDQQF6y7cBMxygOeAyaZtkN9BpN-A&usqp=CAU">
                 </div>
                 <div class="user-data">
@@ -104,7 +104,7 @@
         <div class="feed">
             <div class="user">
                 <div class="img">
-                    <img
+                    <img alt="user"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ1-zqXFUoGFvWiVbFJ8e7NMI_PmMisQvz3kg&usqp=CAU">
                 </div>
                 <div class="user-data">
